feat: create compound interest page

--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,16 @@
 .link {
   @apply text-blue-600 underline;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
